<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/actionbar"
        android:id="@+id/register_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_header"
            android:id="@+id/txtToolbarLabel"
            android:textSize="@dimen/appTitle"
            android:textStyle="bold"
            android:textColor="@color/appTitle"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar"
        android:hint="@string/reg_name"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:minWidth="200dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/reg_divider"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="2dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@id/name_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:background="#000000"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_label"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:hint="@string/enter_email"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@+id/reg_divider"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_pass_label"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_email_label"
        android:layout_marginStart="40dp"
        android:hint="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_pass"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reenter_pass_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_pass_label"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:hint="@string/reenter_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_reenter_pass"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_email_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reenter_pass_label"
        android:layout_marginTop="24dp"
        android:text="@string/reg_button" />

    <View
        android:id="@+id/reg_divider2"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="2dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@id/reg_email_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        android:background="#000000"/>

    <TextView
        android:id="@+id/reg_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reg_divider2"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/or_login"
        android:textColor="@color/actionbar"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/reg_phone_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reg_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/reg_phone" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/login_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>

