<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/actionbar"
        android:id="@+id/actionbar"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="5sp"
        android:text="Remove Item From Low Stock"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_below="@id/title"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="7sp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/removeFromLow1"
                android:id="@+id/txtLine1"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                style="@style/HelpImages"
                app:layout_constraintDimensionRatio="@string/dimen"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/img1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLine1"
                android:src="@drawable/low_stock_tab"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/removeFromLow2"
                android:id="@+id/txtLine2"
                android:layout_marginTop="10sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/img1"/>

            <ImageView
                style="@style/HelpImages"
                app:layout_constraintDimensionRatio="@string/dimen"
                android:id="@+id/img2"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLine2"
                android:src="@drawable/remove_low_stock"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>