<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Items">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15sp"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/ETProductName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editext_round_blue"
            android:layout_marginTop="16dp"
            android:hint="@string/product_name_hint"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/ETDesc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editext_round_blue"            android:layout_marginTop="16dp"
            android:inputType="text"
            android:hint="@string/product_desc_hint"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/ETProductCategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editext_round_blue"            android:inputType="textAutoComplete"
            android:hint="@string/category_hint"
            android:layout_marginTop="16dp"
            android:importantForAutofill="yes" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="In Stock"
            android:layout_marginTop="10sp"
            android:id="@+id/checkStatus"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location: "
            android:textSize="15sp"
            android:layout_marginTop="20sp"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Barcodes: "
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            android:id="@+id/barcode"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="5sp"
            android:textSize="15sp"
            android:id="@+id/txtBarcode"/>


    </LinearLayout>


<!--    </LinearLayout>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barcodeScannerFloatingButton"
        android:backgroundTint="@color/actionbar"
        android:clickable="true"
        app:srcCompat="@drawable/location"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/barcodeScannerFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        app:srcCompat="@drawable/camera_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveItemFloatingButton"
        android:layout_margin="15sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveItemFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:backgroundTint="@color/actionbar"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save" />



</androidx.constraintlayout.widget.ConstraintLayout >